Fix landing page disclaimer margin on mobile

--- a/cfgov/unprocessed/css/pages/ask.less
+++ b/cfgov/unprocessed/css/pages/ask.less
@@ -89,6 +89,11 @@
         } );
     }
 
+    .ask-disclaimer {
+        .respond-to-min( @bp-sm-min {
+            margin-bottom: 0;
+        } );
+    }
     
 }
 
